--- a/hackathon/pom.xml
+++ b/hackathon/pom.xml
@@ -37,6 +37,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.26</version> <!-- Use the appropriate version -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
