--- a/hackathon/src/main/resources/application.properties
+++ b/hackathon/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/javadevjournal
-#spring.datasource.username=javadevjournal
-#spring.datasource.password=ThePassword
+#spring.datasource.url=jdbc:mysql://localhost:3306/conygreportfolio
+#spring.datasource.username=root
+#spring.datasource.password=c0nygre
 #spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
