--- a/hackathon/.gitignore
+++ b/hackathon/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+hackathon/src/main/resources/application-dev.properties
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
