--- a/hackathon/src/main/resources/application.properties
+++ b/hackathon/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #
 #
 #server.port=8080
+spring.config.import=optional:file:src/main/resources/application-dev.properties
 
 
