--- a/hackathon/src/main/resources/application.properties
+++ b/hackathon/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/conygreportfolio?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=c0nygreportfolio
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#
-#
-#server.port=8080
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
