--- a/hackathon/src/main/resources/application.properties
+++ b/hackathon/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/conygreportfolio
-#spring.datasource.username=root
-#spring.datasource.password=c0nygre
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/conygreportfolio?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=c0nygreportfolio
+spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
