--- a/hackathon/src/main/resources/application.properties
+++ b/hackathon/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/portfolio?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
